@@ -2,8 +2,13 @@
 Version 1.6.7
 *******************************************************************************
 
+2010-04-25 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	Define PROTOTYPES to be one by default in global.h. This affects the
+	RSA MD5 code.
+	
 2010-03-27 Nick Leverton <nick@leverton.org>
 	Subscription auto-renewals copy the renewal time from old subscription.
+
 
 2010-03-27 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	Backport of svn revision 527:
